--- a/playbooks/oce.yml
+++ b/playbooks/oce.yml
@@ -1,10 +1,10 @@
 
-- hosts: master
+- hosts: masters
   remote_user: "{{ cloud_user }}"
   tags: all
   tasks: []
 
-- hosts: masters, nodes
+- hosts: masters, nodes, bastion
   sudo: yes
   remote_user: "{{ cloud_user }}"
   tags: ipaclient
