--- a/roles/ipaclient/tasks/main.yml
+++ b/roles/ipaclient/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+
+- name: upgrade all packages
+  yum:
+    name: '*'
+    state: latest
+
 - name: Install IPA Client packages
   tags:
     - ipaclient
