Remove file generation from openssl, as certmonger already does that

--- a/roles/websso/files/websso-proxy.conf
+++ b/roles/websso/files/websso-proxy.conf
@@ -1,7 +1,7 @@
 # matches for Websso IdP
 <LocationMatch "^/auth">
-    NSSOptions +StdEnvVars +ExportCertData +StrictRequire +OptRenegotiate
-    NSSVerifyClient optional
+    SSLOptions +StdEnvVars +ExportCertData +StrictRequire +OptRenegotiate
+    SSLVerifyClient optional
     ProxyPassMatch ajp://localhost:8109
     ProxyPassReverse ajp://localhost:8109
 </LocationMatch>
