--- a/roles/websso/tasks/main.yml
+++ b/roles/websso/tasks/main.yml
@@ -14,7 +14,7 @@
     - openldap-clients
     - openssl
     - httpd
-    - mod_nss
+    - mod_ssl
 
 - name: upgrade all packages
   yum:
@@ -44,16 +44,31 @@
 - name: Add service principals
   ipaservice: principal="HTTP/sso.{{ ipa_realm | lower }}@{{ ipa_realm }}"
 
-- name: HTTPS certificate
+- name: HTTPS certificate NSS
   getcert:
     location: /etc/httpd/alias
-    nickname: Server-Cert    
+    nickname: Server-Cert
     token: NSS Certificate DB
     pin_file: /etc/httpd/alias/pwdfile.txt
     kerberos_principal: "HTTP/sso.{{ ipa_realm | lower }}"
     bits: 2048
     ca: IPA
     db_group: apache
+  when: False
+
+
+- name: HTTPS certificate OpenSSL
+  getcert:
+    key_file: /etc/pki/tls/private/localhost.key
+    certificate_file: /etc/pki/tls/certs/localhost.crt
+    kerberos_principal: "HTTP/sso.{{ ipa_realm | lower }}@{{ ipa_realm }}"
+    bits: 2048
+    ca: IPA
+  when: True
+
+#TODO change group on these to match apache
+#    key_file: /etc/pki/tls/private/localhost.key
+#    certificate_file: /etc/pki/tls/certs/localhost.crt
 
 
 #HTTPD as reverse proxy
