--- a/roles/cfmeconf/tasks/main.yml
+++ b/roles/cfmeconf/tasks/main.yml
@@ -21,12 +21,14 @@
 
 - name:  ipa-client
   shell: >
-    appliance_console_cli --host cfme.{{ ipa_domain }} --ipaserver idm.{{ ipa_domain }} --iparealm {{ ipa_realm }} --ipaprincipal admin --ipapassword {{ ipa_server_password }}
+    /opt/rh/cfme-gemset/bin/appliance_console_cli --host cfme.{{ ipa_domain }} --ipaserver idm.{{ ipa_domain }} --iparealm {{ ipa_realm }} --ipaprincipal admin --ipapassword {{ ipa_server_password }}
     creates: /etc/ipa/default.conf
+  when: False
+
 
 - name: configure primary database and region
   shell: >
-    appliance_console_cli --internal --username admin --password {{ ipa_server_password }} --region 1 --dbdisk /dev/vdb
+    /opt/rh/cfme-gemset/bin/appliance_console_cli --internal --username admin --password {{ ipa_server_password }} --region 1 --dbdisk /dev/sdc
     creates: /var/www/miq/vmdb/config/database.yml
 
 
