--- a/playbooks/testcred.yml
+++ b/playbooks/testcred.yml
@@ -2,16 +2,6 @@
   gather_facts: false
   vars:
     config_file: "{{ lookup('env', 'OS_CLIENT_CONFIG_FILE') }}"
-    nova_tenant_name: demo
-    nova_image_name: "cirros-0.3.2-x86_64-uec"
-    nova_instance_name: autobot
-    nova_instance_state: 'present'
-    nova_flavor_name: m1.nano
-
-    nova_group:
-      group_name: antarctica
-      instance_name: deceptacon
-      instance_count: 3
   tasks:
     - debug: msg="{{ config_file }}"
     - stat: path="{{ config_file }}"
@@ -24,10 +14,6 @@
 
     - name: "Setting nova instance state to: {{ nova_instance_state }}"
       local_action:
-        module: nova_compute
-        login_username: "{{ clouds.devstack.auth.username }}"
-<<<<<<< HEAD
-        login_password: "{{ clouds.devstack.auth.password }}"
-=======
-        login_password: "{{ clouds.devstack.auth.password }}"
->>>>>>> test creds
+        module: os_server_facts
+    -  name: list server facts
+       debug: msg="{{ openstack_servers }}"
