variable for keypair

--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -6,4 +6,4 @@ ipa_realm: "{{ clustername|upper }}"
 ssh_config_path: "{{ ansible_env.HOME }}/.ssh/config"
 netname: "{{ username  }}-private-net"
 securitygroupname: "{{username }}-rdu-all-open"
-
+sshkeyname: "{{ username }}-pubkey"
