--- a/roles/provision/openstack/tasks/teardown.yml
+++ b/roles/provision/openstack/tasks/teardown.yml
@@ -61,6 +61,12 @@
     name: "{{ item.name }}.{{ clustername }}"
   with_items: "{{ cluster_hosts  }}"
 
+- os_volume:
+    cloud: "{{ cloudname }}"
+    display_name:  "{{ item.volume_name }}"
+    state: absent
+  with_items: "{{ cluster_volumes }}"
+
 - os_router:
     cloud: "{{ cloudname }}"
     state: absent
