--- a/roles/provision/openstack/tasks/create.yml
+++ b/roles/provision/openstack/tasks/create.yml
@@ -16,6 +16,9 @@
     dns_nameservers:
       - 8.8.8.7
       - 8.8.8.8
+- debug:
+    msg: "Public network name is {{ public_network_name }}"
+
 
 - os_router:
     cloud: "{{ cloudname }}"
