default no servers or volumes for provisioning

--- a/roles/provision/openstack/defaults/main.yml
+++ b/roles/provision/openstack/defaults/main.yml
@@ -10,21 +10,24 @@ public_network_name: Public
 image_name: rhel-guest-image-7.4-0
 
 
-cluster_hosts:
-  - {name: idm,    flavor:  m1.medium}
-  - {name: sso,    flavor:  m1.medium}
-  - {name: master0, flavor:  m1.medium}   #this needs to be xlarge IAW OSC docs
-  - {name: master1, flavor:  m1.medium}
-  - {name: master2, flavor:  m1.medium}
-  - {name: node0,   flavor:  m1.medium}
-  - {name: node1,   flavor:  m1.medium}
-  - {name: node2,   flavor:  m1.medium}
-  - {name: bastion, flavor:  m1.small}
+cluster_hosts: []
 
 
-cluster_volumes: 
-  - {server_name: master0, volume_name: master0_var_volume, size: 30}
-  - {server_name: master1, volume_name: master1_var_volume, size: 30}
-  - {server_name: master2, volume_name: master2_var_volume, size: 30}
+#  - {name: idm,    flavor:  m1.medium}
+#  - {name: sso,    flavor:  m1.medium}
+#  - {name: master0, flavor:  m1.medium}   #this needs to be xlarge IAW OSC docs
+#  - {name: master1, flavor:  m1.medium}
+#  - {name: master2, flavor:  m1.medium}
+#  - {name: node0,   flavor:  m1.medium}
+#  - {name: node1,   flavor:  m1.medium}
+#  - {name: node2,   flavor:  m1.medium}
+#  - {name: bastion, flavor:  m1.small}
+
+
+cluster_volumes: []
+
+#  - {server_name: master0, volume_name: master0_var_volume, size: 30}
+#  - {server_name: master1, volume_name: master1_var_volume, size: 30}
+#  - {server_name: master2, volume_name: master2_var_volume, size: 30}
 
 
