Variable for teardown_network

--- a/playbooks/teardown_networks.yml
+++ b/playbooks/teardown_networks.yml
@@ -1,7 +1,8 @@
 ---
+
 - hosts: localhost
   vars:
     teardown: false
-    teardown_network: false
+    teardown_network: true
   roles:
     -  provision/openstack
