Teardown all when tearing down  network

--- a/playbooks/teardown_networks.yml
+++ b/playbooks/teardown_networks.yml
@@ -2,7 +2,7 @@
 
 - hosts: localhost
   vars:
-    teardown: false
+    teardown: true
     teardown_network: true
   roles:
     -  provision/openstack
