--- a/roles/provision/openstack/tasks/create.yml
+++ b/roles/provision/openstack/tasks/create.yml
@@ -14,8 +14,8 @@
     name: "{{ netname }}_subnet"
     cidr: 192.168.24.0/23
     dns_nameservers:
-      - 8.8.8.7
-      - 8.8.8.8
+      - "{{ lab_nameserver1 }}"
+      - "{{ lab_nameserver2 }}"
 - debug:
     msg: "Public network name is {{ public_network_name }}"
 
