--- a/roles/ipaserver/tasks/main.yml
+++ b/roles/ipaserver/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+
+- debug:
+    msg: "Distro = {{ ansible_distribution }}"
+
+- name: Enable a RHSM repository
+  rhsm_repository:
+    name: rhel-7-server-htb-rpms
+    state: absent
+  when: ansible_distribution == 'Red Hat' and ansible_distribution_major_version == '7'
+
+- name: Enable a RHSM repository
+  rhsm_repository:
+    name: rhel-7-server-rpms
+    state: present
+  when: ansible_distribution == 'Red Hat' and ansible_distribution_major_version == '7'
+
 - name: upgrade all packages
   yum:
     name: '*'
