--- a/roles/subscribe/tasks/main.yml
+++ b/roles/subscribe/tasks/main.yml
@@ -14,15 +14,6 @@
       - "{{ lab_nameserver2 }}"
   when: False
 
-- name: Subscribe
-  redhat_subscription:
-    state: present
-    username: "{{ redhat_user }}"
-    password: "{{ redhat_password }}"
-    pool_ids: "{{ redhat_pool_id }}"
-  ignore_errors: yes
-
-
 - lineinfile:
     path: /etc/ssh/sshd_config
     state: present
@@ -40,4 +31,47 @@
   service:
     name: sshd
     state: restarted
+  when: sshd_contents.changed
+
+
+- name: Subscribe
+  redhat_subscription:
+    state: present
+    username: "{{ redhat_user }}"
+    password: "{{ redhat_password }}"
+    pool_ids: "{{ redhat_pool_id }}"
+  ignore_errors: yes
+
+
+- name: Enable a RHSM repository
+  rhsm_repository:
+    name: rhel-7-server-htb-rpms
+    state: absent
+  when: ansible_distribution == 'RedHat' and ansible_distribution_major_version == '7'
+
+- name: Enable a RHSM repository
+  rhsm_repository:
+    name: rhel-7-server-rpms
+    state: present
+  when: ansible_distribution == 'RedHat' and ansible_distribution_major_version == '7'
+
+- name: upgrade all packages
+  yum:
+    name: '*'
+    state: latest
+
+- name: Reboot immediately if there was a change.
+  shell: "sleep 5 && reboot"
+  async: 1
+  poll: 0
+  when: sshd_contents.changed
+
+
+
+- name: Wait for the reboot to complete if there was a change.
+  wait_for_connection:
+    connect_timeout: 20
+    sleep: 5
+    delay: 5
+    timeout: 300
   when: sshd_contents.changed
