use short name for server name in nova

--- a/roles/provision/openstack/tasks/create.yml
+++ b/roles/provision/openstack/tasks/create.yml
@@ -49,7 +49,7 @@
   os_server:
     cloud: "{{ cloudname }}"
     state: present
-    name: "{{ item.name }}.{{ clustername }}"
+    name: "{{ item.name }}"
     image: "{{ image_name }}"
     key_name: "{{ sshkeyname }}"
     timeout: 200
