--- a/playbooks/provision-libvirt.yml
+++ b/playbooks/provision-libvirt.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: localhost
+- hosts: dialga
+  become: no
+  remote_user: root
   vars:
     teardown: false
     teardown_network: false
