--- a/roles/provision/libvirt/tasks/create.yml
+++ b/roles/provision/libvirt/tasks/create.yml
@@ -13,13 +13,12 @@
     dest=/var/lib/libvirt/images/{{ item.name }}.qcow2
   with_items: "{{ cluster_hosts }}"
 
-- meta: end_play
 
 - name: define vm
   virt:
       name: "{{ item.name }}"
       command: define
-      xml: "{{ lookup('template', 'forretress.xml.j2') }}"
+      xml: "{{ lookup('template', 'vm.xml.j2') }}"
       uri:  qemu:///session
   with_items: "{{ cluster_hosts }}"
 
