REplace hardcoded files and paths for images with variables

--- a/roles/provision/libvirt/defaults/main.yml
+++ b/roles/provision/libvirt/defaults/main.yml
@@ -1,2 +1,8 @@
+---
 cluster_hosts:
   - {name: forretress}
+
+source_image_file: rhel-server-7.5-x86_64-kvm.qcow2
+source_image_dir: /home/ayoung/Downloads
+target_image_dir: /var/lib/libvirt/images
+
