--- a/roles/provision/libvirt/defaults/main.yml
+++ b/roles/provision/libvirt/defaults/main.yml
@@ -1,8 +1,17 @@
 ---
 cluster_hosts:
-  - {name: forretress}
+  - {name: passimian }
 
 source_image_file: rhel-server-7.5-x86_64-kvm.qcow2
 source_image_dir: /home/ayoung/Downloads
 target_image_dir: /var/lib/libvirt/images
 
+source_keystore_dir: /home/ayoung/.ssh
+source_pubkey_file: id_rsa.pub
+hypervisor_keystore_dir: /tmp
+target_keystore_dir: /home/cloud-user/.ssh
+target_pubkey_file: authorized_keys
+
+
+ethernet_device: em1
+static_ip_address: 10.127.0.3
